[gd_scene load_steps=6 format=3 uid="uid://c2ssi2sqp00kb"]

[ext_resource type="Script" path="res://Scenes/menu/Menu.gd" id="1_d6a50"]
[ext_resource type="Texture2D" uid="uid://bs0od1thkjne8" path="res://Background/_6752c624-0aaa-4307-b430-10982fe3fd5c.jpg" id="2_n6ouf"]
[ext_resource type="Theme" uid="uid://c0re1bitbft18" path="res://Assets/sci-fi-theme-4/sci-fi-theme.tres" id="3_ihx1g"]
[ext_resource type="AudioStream" uid="uid://ddal3xhroqyqy" path="res://Assets/music/Menu_Under Stars II (Remastered 2005).mp3" id="4_bii8a"]

[sub_resource type="GDScript" id="GDScript_d0tp4"]
script/source = "extends AudioStreamPlayer2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Menu2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d6a50")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n6ouf")
expand_mode = 5
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.5
offset_top = -174.5
offset_right = 246.5
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_ihx1g")
theme_override_font_sizes/font_size = 55
text = "

Rescue Pete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "





"

[node name="BPlay" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 45)
layout_mode = 2
theme = ExtResource("3_ihx1g")
theme_override_font_sizes/font_size = 22
text = "Play"

[node name="BCredits" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme = ExtResource("3_ihx1g")
theme_override_font_sizes/font_size = 22
text = "Credits"

[node name="BExit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme = ExtResource("3_ihx1g")
theme_override_font_sizes/font_size = 22
text = "Exit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bii8a")
autoplay = true
script = SubResource("GDScript_d0tp4")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/BPlay" to="." method="_on_b_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/BCredits" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/BExit" to="." method="_on_b_exit_pressed"]
